--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero" >
+		<div class="heroImage" >
+			<img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+		</div>
+		<div class="heroContent" >
+			<h1>Welcome to my Pinterest Clone</h1>
+			<p>Discover new inspiration and save your ideas</p>
+			<button ><a href="https://in.pinterest.com/" >Explore Now</a></button>
+			</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
